# open-webui-llama-cpp-runner

./: .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  compose-gpu.yaml  compose.yaml  hello.py  main.py  proxy_server.py  proxy_server_gpu.py  pyproject.toml  switch.sh  switch_gpu.sh  unified_server.py
scripts/: setup_libs.sh
src/llama_cpp_runner/: __init__.py  api.py  base.py  cpu.py  gpu.py  logger.py  main.py  main_gpu.py  utils.py  validation.py
tests/: test_endpoints.py  test_runner.py
