[project]
name = "llama-cpp-runner"
version = "0.0.1"
description = "Quick and easy way to run large language models (LLMs) with llama.cpp"
readme = "README.md"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
