[project]
name = "llama-cpp-runner"
version = "0.0.1"
description = "Quick and easy way to run large language models (LLMs) with llama.cpp"
readme = "README.md"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
]
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true